manifests/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: gr2-nlp
  labels:
    app: fmstack-nlp
    component: fms-orchestr8-nlp
spec:
  to:
    kind: Service
    name: fms-orchestr8-nlp
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
